--- a/1_base/1.basicUnderstandings.md
+++ b/1_base/1.basicUnderstandings.md
@@ -25,12 +25,12 @@ EXP: pianest plays a sonata --> sequence of keys pressed --> piano responds(CPU)
 EXP: a Germany fan wants to talk to a Japanese Director.They need a translator.
 info(Germany)--> translator --> info(tranlated) -->Japanese Director reply(CPU) --> replyinfo(Japanese)--> translator-->replyinfo(Germany)
 
-EXP: the first translator is written in machine code, it will be loaded in memory and translate data.
-- 'python code'(in memory)--> translator --> CPU execute-->
-- 'python code' in machine code(in memory) --> CPU execute -->
-- 'python code result' in machine code(in memory) --> translater--> CPU execute-->
-- 'python code result'(in memory) --> displayIO translator(in memory)--> CPU execute-->
-- 'python code result'IO(in memory) --> 'python code result'(in displayIO)
+EXP: the first translator is written in machine code, it will be loaded in ram and translate data.
+- 'python code'(in ram)--> translator(interpreter) --> CPU execute-->
+- 'python code' in machine code(in ram) --> CPU execute -->
+- 'python code result' in machine code(in ram) --> translater(interpreter)--> CPU execute-->
+- 'python code result'(in ram) --> displayIO translator(in ram)--> CPU execute-->
+- 'python code result'IO(in ram) --> 'python code result'(in displayIO)
 
 
 ## Context
