--- a/1_base/1.basicUnderstandings.md
+++ b/1_base/1.basicUnderstandings.md
@@ -1,3 +1,4 @@
+
 ## Python LANGUAGE
 ### hardwares basics
 > It's highly recommended to watch [crash course computer science](https://www.youtube.com/watch?v=tpIctyqH29Q&list=PLH2l6uzC4UEW0s7-KewFLBC1D0l6XRfye) first.
@@ -8,9 +9,9 @@
 - IOInterface don't know cpu instructions,so it needs driver to translate. this is why when you plugin a new mouse,usb,your computer will notify it's installing new driver.
 
 
-### python is a LANGUAGE
+### build communication
 
-python is a LANGUAGE, it has basic elements and follows specific grammers.Only those who use these elements and follow these grammers might communicate to each
+Python is a LANGUAGE, it has basic elements and follows specific grammers.Only those who use these elements and follow these grammers might communicate to each
 other otherwise it makes no sense to them. But there's also a role like translator that can translate one language into another.
 
 CPU is the core where communication(do something to info,respond,transform) happens. Data flow in other hardwares, but nothing changed.
@@ -35,16 +36,57 @@ EXP: the first translator is written in machine code, it will be loaded in ram a
 
 ## Context
 
-> or `lexical scope`, or some more undestandable word `Condition`
+> or `lexical scope`, or a more undestandable word `Condition`
 
-With only one context,all variables need to be named differently,which is impossible for big programs produced by many people.So multiple context is needed.
-But be careful, multiple context causes confusion or ambiguity if you don't know the context.
+Python is a LANGUAGE, pragmatics(context) endues its meaning.Context ensures meaning of pragma.Time(order) is base of context.
+
+EXP: As time goes, context improves itself, it becomes more meaningful and usually more difficult to understand.
+
+Each sentence gets meaning from the context before and will serve as part of context for the sentence after.
+For the sentence `John climed down the mountian.`. 
+Each senetence before it is its context.It becomes one context for each senetence after it.
+The most related context for it is `John climed up the mountian.`
+
+1. ...
+1. John went mountain-climbing.
+1. John climed up the mountian.
+1. John was hungry.
+2. John ate some food.
+1. John climed down the mountian.
+1. John went home.
+1. John ate some food.
+1. ...
 
 
-EXP: John killed Mary in game context, John killed Mary in reality context.What happened is quite different.
 
-EXP: Context 1, John has a dog named Cargo.Context 2, Mary has a dog named Cargo.One day John took Cargo to Mary's house.Then John fed Cargo. 
-In this context, which Cargo John fed is ambiguous.
+EXP: What Mary says is triggered by what John said and vice versa. Once order changed, the context will be quite different,some context will never happen
+- ...
+- John: Mary, I saw on a dog on your desk.
+- Mary: Oh,that's my dog Piper.
+- Mary: He's very very smart.
+- John: Really. Can he do any tricks?
+- Mary: Yeah,when I point to him with my finger and say Bang, he will fell and pretends to be dead.
+- John: Wow, can I have a try?
+- Mary: Sure. You may also try to pet a dog.
+- John: That might be a good idea.
+- John: Oh my god! He's peeing on the desk.
+- Mary: What? 
+- ...
+
+
+For programming, with only one context,all variables need to be named differently,which is impossible for big programs produced by many people.
+So multiple seperate context is needed.
+But be careful, multiple context causes confusion or ambiguity if you don't know the context or contexts are mixed together.
+
+
+EXP: John killed Mary without context is ambiguous. John killed Mary in game context, John killed Mary in reality context.
+With specific context, what happened is more clear.
+
+EXP: 
+Context 1, John has a dog named Cargo.
+Context 2, Mary has a dog named Cargo.
+Context 3,One day John took Cargo to Mary's house. Then John fed Cargo. 
+In this mixed context(Context 3), which Cargo John fed is ambiguous.
 
 
 
