--- a/1_base/1.basicUnderstandings.md
+++ b/1_base/1.basicUnderstandings.md
@@ -40,7 +40,7 @@ EXP: the first translator is written in machine code, it will be loaded in ram a
 
 Python is a LANGUAGE, pragmatics(context) endues its meaning.Context ensures meaning of pragma.Time(order) is base of context.
 
-EXP: As time goes, context improves itself, it becomes more meaningful and usually more difficult to understand.
+EXP: As time goes, context improves itself, it becomes more meaningful and more difficult to understand.
 
 Each sentence gets meaning from the context before and will serve as part of context for the sentence after.
 For the sentence `John climed down the mountian.`. 
@@ -57,9 +57,9 @@ The most related context for it is `John climed up the mountian.`
 1. John ate some food.
 1. ...
 
+EXP: What Mary says is triggered by what John said and vice versa. 
+If John talks about another thing(build another context), the following context will be totally different
 
-
-EXP: What Mary says is triggered by what John said and vice versa. Once order changed, the context will be quite different,some context will never happen
 - ...
 - John: Mary, I saw on a dog on your desk.
 - Mary: Oh,that's my dog Piper.
@@ -74,12 +74,16 @@ EXP: What Mary says is triggered by what John said and vice versa. Once order ch
 - ...
 
 
-For programming, with only one context,all variables need to be named differently,which is impossible for big programs produced by many people.
-So multiple seperate context is needed.
+In programming, with only a whole context,all variables need to be named differently,which is impossible for big programs produced
+by many people. So the whole context will be split into multiple small contexts.
 But be careful, multiple context causes confusion or ambiguity if you don't know the context or contexts are mixed together.
 
 
-EXP: John killed Mary without context is ambiguous. John killed Mary in game context, John killed Mary in reality context.
+EXP: 
+John killed Mary without context is ambiguous.
+Context 1,John killed Mary in game.
+Context 2,John killed Mary in reality.
+Context 3,John killed Mary in a novel.
 With specific context, what happened is more clear.
 
 EXP: 
