--- a/1_base/1.basicUnderstandings.md
+++ b/1_base/1.basicUnderstandings.md
@@ -4,9 +4,22 @@
 > It's highly recommended to watch [crash course computer science](https://www.youtube.com/watch?v=tpIctyqH29Q&list=PLH2l6uzC4UEW0s7-KewFLBC1D0l6XRfye) first.
 
 - cpu retrives machine code sequence from ram and executes corresponbing instructions pre-determined by cpu producer(like intel,amd) in order.
-- ram stores machine code sequence. Note that in the sequence,some are treated as instructions,some are treated as pure numbers.
+- ram stores machine code sequence. Note that in the sequence,some are treated as instructions+target ram address,some are treated as pure numbers stored in target ram address.
 - storage stores data permenantly 
 - IOInterface don't know cpu instructions,so it needs driver to translate. this is why when you plugin a new mouse,usb,your computer will notify it's installing new driver.
+
+### how program works
+A sequence of code is loaded into ram, first ram address is 0x00000412 for example.
+
+1. address 0x00000412
+1. data in 0x00000412 is sent to cpu, the address 0x00000412 will be temporarily stored somewhere known by cpu.
+1. cpu treats parts of the data as instruction and parts of it as target ram address
+1. data in target ram address will be sent to cpu, cpu deals the data with the instruction before.
+1. cpu reads address 0x00000412 and +1 address 0x00000413
+1. repeat process 1,2,3,4,5 till end or jump to another address
+
+
+
 
 
 ### build communication
