--- a/1_base/1.basicUnderstandings.md
+++ b/1_base/1.basicUnderstandings.md
@@ -47,11 +47,11 @@ EXP: the first translator is written in machine code, it will be loaded in ram a
 - 'python code result'IO(in ram) --> 'python code result'(in displayIO)
 
 
-## Context
+### Context
 
 > or `lexical scope`, or a more undestandable word `Condition`
 
-Python is a LANGUAGE, pragmatics(context) endues its meaning.Context ensures meaning of pragma.Time(order) is base of context.
+Python is a LANGUAGE, pragmatics(context) endues its meaning.Context ensures meaning of pragma. Time(order) is base of context.
 
 EXP: As time goes, context improves itself, it becomes more meaningful and more difficult to understand.
 
@@ -71,7 +71,7 @@ The most related context for it is `John climed up the mountian.`
 1. ...
 
 EXP: What Mary says is triggered by what John said and vice versa. 
-If John talks about another thing(build another context), the following context will be totally different
+If John talks about another thing(build another context), the following context will be totally different(and unexpected)
 
 - ...
 - John: Mary, I saw on a dog on your desk.
@@ -87,29 +87,60 @@ If John talks about another thing(build another context), the following context 
 - ...
 
 
+
 In programming, with only a whole context,all variables need to be named differently,which is impossible for big programs produced
 by many people. So the whole context will be split into multiple small contexts.
 But be careful, multiple context causes confusion or ambiguity if you don't know the context or contexts are mixed together.
 
 
-EXP: 
-John killed Mary without context is ambiguous.
-Context 1,John killed Mary in game.
-Context 2,John killed Mary in reality.
-Context 3,John killed Mary in a novel.
-With specific context, what happened is more clear.
-
-EXP: 
-Context 1, John has a dog named Cargo.
-Context 2, Mary has a dog named Cargo.
-Context 3,One day John took Cargo to Mary's house. Then John fed Cargo. 
-In this mixed context(Context 3), which Cargo John fed is ambiguous.
+EXP: With specific context, what happened is more clear.
+ 
+- John killed Mary without context is ambiguous.
+- Context 1,John killed Mary in game.
+- Context 2,John killed Mary in reality.
+- Context 3,John killed Mary in a novel.
 
 
 
+EXP: In this mixed context(Context 3), which Cargo John fed is ambiguous.
+ 
+- Context 1, John has a dog named Cargo.
+- Context 2, Mary has a dog named Cargo.
+- Context 3,One day John took Cargo to Mary's house. Then John fed Cargo. 
+
+
+EXP: for d, the context before does not matter. for f, the context d and e forms does not matter
+
+- a = 5
+- b = a + 4
+- c = b + 3
+- d = 10
+- e = a + d
+- f = c + 7
+
+We might split contexts. The order of context1 and context2 does not matter, but context3 must be after them.
+
+context1
+- a = 5
+- b = a + 4
+- c = b + 3
+- f = c + 7
+
+context2
+- d = 10
+
+context3
+- e = a + d
 
 
 
+class,function,namespace are ways to split contexts.
+
+## grammer basis: Algebra
+
+> Each varname binds to a value. Varname stands for its identity in the context.
+
+In a context, values can be equal, but varnames need to be unique. With two John·Austin in the office, you can't distinguish with only their names.
 
 
 
