--- a/1_base/1.basicUnderstandings.md
+++ b/1_base/1.basicUnderstandings.md
@@ -136,12 +136,54 @@ context3
 
 class,function,namespace are ways to split contexts.
 
-## grammer basis: Algebra
+### grammer basis: Algebra
 
 > Each varname binds to a value. Varname stands for its identity in the context.
 
 In a context, values can be equal, but varnames need to be unique. With two John·Austin in the office, you can't distinguish with only their names.
 
 
+
+### write,not just think or watch
+
+> In stories, things turn out the way the author wants.And in real life,they don't always...I'd make a mistake and never realize it till I find everybody looking at me.  --from Dial M for Murder
+
+- With only thinking, you can never be wrong.But actually you ignore so many details(or you can say contexts).`context 1` is not connected to `context 2` directly, you need `context 1.1,1.2,1.3` to connect them.You will not find what is needed unless you really do that.
+- With writing the whole program, you miss much less details. You get feeling for the whole context. Detail shows itself naturally.
+- With only thinking,you are seperating yourself from the world.
+- With writing,you can be wrong.Human learn by comparing.Fails are more impressive. These contexts of fails are basis of the context of success.
+- With thinking and writing, you learn quicker and understand better.
+
+
+EXP:
+
+A professional painter knows how each stroke contributes to the final painting.
+The painting strays by bad strokes. Experienced painter could tell whether it's good or bad for the painting. 
+Bad strokes need to be overlaid by good ones.
+These little strokes(including the hidden bad strokes) connect together and build the painting.
+
+The base context of the painting is the painter and his expection.
+He has a rough idea about the target. He takes great effort and gradually fill gaps between contexts.
+
+You have no exceptin of fails,you lose possibility of recognizing what the integrate image could be.
+
+EXP:
+
+Even though a farmer tells and shows you every step about farming.
+Even though you sow seeds, take effort to follow every step the farmer showed.
+You can only wait and hope that these seeds could spring up and bear ears.
+Even though the farmer tells and shows you a million times.
+Because what you do forms you rather than what you spectate.
+That's why only after farming for many times by yourself, You can expect what would happen with more certainty.
+ 
+
+You see the result, but not the process.The result is achieved from the process, and it can't be reversed.
+
+Soul and body(the world) form an integrate man. If you're only a spectator,
+no connection is built between you and the world.
+With thinking and writing, you blend into the world and become part of the world.
+
+Things remote to each other are related in the world.
+You won't see the relationship unless you're related to them.
 
 
