--- a/1_base/1.basicUnderstandings.md
+++ b/1_base/1.basicUnderstandings.md
@@ -146,6 +146,8 @@ In a context, values can be equal, but varnames need to be unique. With two John
 
 ### write,not just think or watch
 
+> The shadow of a man can never stand up and walk on its own.I was my brother's shadow.Now that I have lost him...I don't know what to do. --from Kagemusha(It's highly recommended to watch the movie.) 
+
 > In stories, things turn out the way the author wants.And in real life,they don't always...I'd make a mistake and never realize it till I find everybody looking at me.  --from Dial M for Murder
 
 - With only thinking, you can never be wrong.But actually you ignore so many details(or you can say contexts).`context 1` is not connected to `context 2` directly, you need `context 1.1,1.2,1.3` to connect them.You will not find what is needed unless you really do that.
@@ -181,7 +183,9 @@ You see the result, but not the process.The result is achieved from the process,
 
 Soul and body(the world) form an integrate man. If you're only a spectator,
 no connection is built between you and the world.
+Always being a shadow, never becoming a man.
 With thinking and writing, you blend into the world and become part of the world.
+
 
 Things remote to each other are related in the world.
 You won't see the relationship unless you're related to them.
