--- a/1_base/1.basicUnderstandings.md
+++ b/1_base/1.basicUnderstandings.md
@@ -3,10 +3,17 @@
 ### hardwares basics
 > It's highly recommended to watch [crash course computer science](https://www.youtube.com/watch?v=tpIctyqH29Q&list=PLH2l6uzC4UEW0s7-KewFLBC1D0l6XRfye) first.
 
+> references: [instructions set](https://en.wikipedia.org/wiki/X86_instruction_listings#x86_integer_instructions)
+
+hardwares:
+
 - cpu retrives machine code sequence from ram and executes corresponbing instructions pre-determined by cpu producer(like intel,amd) in order.
 - ram stores machine code sequence. Note that in the sequence,some are treated as instructions+target ram address,some are treated as pure numbers stored in target ram address.
 - storage stores data permenantly 
 - IOInterface don't know cpu instructions,so it needs driver to translate. this is why when you plugin a new mouse,usb,your computer will notify it's installing new driver.
+
+Structure of memory/ram(value with an address) provides a key and unique feature--dynamically `JUMP`.It endues the ability to build layers of abstraction(wrap contexts).
+
 
 ### how program works
 A sequence of code is loaded into ram, first ram address is 0x00000412 for example.
@@ -138,7 +145,7 @@ class,function,namespace are ways to split contexts.
 
 ### grammer basis: Algebra
 
-> Each varname binds to a value. Varname stands for its identity in the context.
+> Each varname binds to a value. Varname stands for its identity in the context. Memery address is unique and will not repeat, so every variable is dispatched an address.
 
 In a context, values can be equal, but varnames need to be unique. With two John·Austin in the office, you can't distinguish with only their names.
 
