--- a/1_base/2.components.md
+++ b/1_base/2.components.md
@@ -1,7 +1,7 @@
 ## Basic idea
 > [The transformation of data is the only purpose of any program](https://www.youtube.com/watch?v=rX0ItVEVjHc)
 
-What programs do is keep transforming data from one form into another and from another form into something else and go on till the final output. 
+What programs do is iterating all data and transforming data from one form into another.Then iterate all these transformed data and transform them into another form. Continue the process till the final output. 
 
 ### function
 
