--- a/1_base/2.components.md
+++ b/1_base/2.components.md
@@ -19,15 +19,15 @@ Memory is allocated to func, all params(`a` here),variables,operations will be d
 ### containers
 And every program need to deal a lot of data. Thus it's impossible to give every data a name. So a named container that stores multiple data is needed that is easy to iterate data again and again.
 
-A container is a namespace(context) with anonynous(unnamed) data.And therefore, a way to get,set,add,delete each data in the container is needed. `[]` is used for this purpose,`listA[0]` or `ArrayB[0]` for example. Thus,following the structure of memory, container is usually allocated to a chunk of continuous memory,each anonymous data is dispatched an address so that it can be found.`dict` is a container that gives every data a name,so you won't see a dict with a lot of data manully generated.
+A container is a namespace(context) with anonynous(unnamed) data.And therefore, a way to get,set,add,delete each data in the container is needed. `[]` is used for this purpose,`strA[0]` or `ArrayB[0]` for example. Thus,following the structure of memory, container is usually allocated to a chunk of continuous memory,each anonymous data is dispatched an address so that it can be found.`dict` is a container that gives every data a name,so you won't see a dict with a lot of data manully generated.
 
 Now you only have to add data into container.The program can iterate the container and transform each data retrived automatically.Transformed data will be stored in another container.Data will walk through(iterated in) layers of containers.
 
-`struct` is invented to store different types of elements. Developers want to simulate the world and created the concept of entity/object. Treat data as attributes and function as actions.Different types of data and functions are combined to the structure `class`
+`struct` is invented to store different types of elements. Developers want to simulate the world and created the concept of entity/object. Treat data as attributes and function as actions.Different types of data and functions are combined to the structure `class`. In python,
 
 #### two types of containers
 
-1. Container like `list` is a horizontal extension. Because elements in container are of the same type, it's easy to add new element and the container's length is unlimited.It's very useful to apply the same operation to each element inside.
+1. Container like `array.array` is a horizontal extension. Because elements in container are of the same type, the container's length is unlimited.It's very useful to apply the same operation to each element inside.
 2. Container like `class` digs vertical depth. Because type of every newly added element needs to be specified manually, data amount in such a container is limited(like `dict`). And the container is not used for iteration(though it can be iterated). But, it's very useful to process multiple complicated operations internally and keep the container live longer.Reduce alloc frequency and cost less memory. 
 
 
