--- a/1_base/2.components.md
+++ b/1_base/2.components.md
@@ -3,6 +3,8 @@
 
 What programs do is iterating all data and transforming data from one form into another.Then iterate all these transformed data and transform them into another form. Continue the process till the final output. 
 
+And,Or,Not gates are fundament of transforming data.
+
 ### function
 
 a series of instruction set to be applied to data and thus transform data.The base is [`substitution model`](https://mitpress.mit.edu/sites/default/files/sicp/index.html).
@@ -29,6 +31,8 @@ Now you only have to add data into container.The program can iterate the contain
 
 1. Container like `array.array` is a horizontal extension. Because elements in container are of the same type, the container's length is unlimited.It's very useful to apply the same operation to each element inside.
 2. Container like `class` digs vertical depth. Because type of every newly added element needs to be specified manually, data amount in such a container is limited(like `dict`). And the container is not used for iteration(though it can be iterated). But, it's very useful to process multiple complicated operations internally and keep the container live longer.Reduce alloc frequency and cost less memory. 
+
+NOTE: In python, the type of function is also `class`.
 
 
 It's usual to create a lot of `vertical containers` stored in a `horizontal container` and a couple of  `horizontal containers` stored in a `vertical container`.Thus the structure/workflow is decided.
@@ -72,8 +76,37 @@ python3 introduced type as meta class in substitution of object. It's more like 
 	elems = Elems()
 
 
+
+
 ### exception
 
 the most complicated part in programming language.
 
 TODO: dig into exception
+
+
+### protocol/interface/requirement/rule/argot
+
+> protocol is invented to satisfy concrete occassion(context). It's often drafted with only a few rules. 
+
+In desert,Water is more precious than gold. Car consumes oil rather than water. Sandglass won't work if replacing sand inside with rock.
+Without protocol, as we have distinct contexts that each can only deal with specific type of data. String treated as numbers would's work.
+
+- You might ask, why data needs transformation, they're just bits. Yes, at the and,or,not gate level,protocol is not needed,but contexts are also shattered. At this layer, the numerous amount of data are uncontrollable and meaningless to you.
+- You might say maybe we should keep type of data in transportation unchanged and have translaters called when data transported in and transported out. Yes,that's type conversion. Translaters that run implicitly(automatically) are called implicit type conversion. It costs a lot more resource to translate in and out every time. 
+- With protocol. If B needs type y, A transform data from type x to type y. data transported from A to B, no translation needed.
+- Without protocol, A translate data from type x to type z, data transported from A to B, B translate data from type z to type y.
+
+Data types are also protocol.signed int and unsigned int both occupy 4 bytes. How can you tell if there's no protocol.
+
+On specific context,specific type of data is needed. If data obeys the protocol, it's usually transformed into specific form, only data that satisfy the form will be recognized and handled.
+
+EXP: Mary and John make a deal that "good pack" means "let's watch a movie","black fact" means "no,I don't want to","red shoe" means "yeah, let's go".
+The phrases themselves("good pack","black fact","red shoe") do not matter.Just like varnames, You can choose whatever phrase you like when drafting protocol. What they mean matters. When phrases are decided, whoever(even a stranger) says "good pack","black fact" or "red shoe" will trigger Mary and John's protocol and other phrases won't.
+
+The protocol proposer recognize data that obey the protocol and discard or raise error for the data that do not obey the protocol.Just like when a stranger calls, you have to recognize his voice or ask who he is or just hangup.
+
+EXP:
+
+an http request: `GET / HTTP/1.1\r\n\r\nContentType:text/html\r\n`
+you might want to change it to this form: `RETRIVE HTTP/1.2 /\r\n\r\nContentType:text/html\r\n`. If it's good enough, It might be the new standard http protocol.But it won't be easy,because it's a worldwide protocol.
