--- a/1_base/2.components.md
+++ b/1_base/2.components.md
@@ -94,7 +94,7 @@ Without protocol, as we have distinct contexts that each can only deal with spec
 
 - You might ask, why data needs transformation, they're just bits. Yes, at the and,or,not gate level,protocol is not needed,but contexts are also shattered. At this layer, the numerous amount of data are uncontrollable and meaningless to you.
 - You might say maybe we should keep type of data in transportation unchanged and have translaters called when data transported in and transported out. Yes,that's type conversion. Translaters that run implicitly(automatically) are called implicit type conversion. It costs a lot more resource to translate in and out every time. 
-- With protocol. If B needs type y, A transform data from type x to type y. data transported from A to B, no translation needed.
+- With protocol. If B needs type y, A transform data from type x to type y. data transported from A to B, check if type of data is y, but no translation needed.
 - Without protocol, A translate data from type x to type z, data transported from A to B, B translate data from type z to type y.
 
 Data types are also protocol.signed int and unsigned int both occupy 4 bytes. How can you tell if there's no protocol.
@@ -109,4 +109,4 @@ The protocol proposer recognize data that obey the protocol and discard or raise
 EXP:
 
 an http request: `GET / HTTP/1.1\r\n\r\nContentType:text/html\r\n`
-you might want to change it to this form: `RETRIVE HTTP/1.2 /\r\n\r\nContentType:text/html\r\n`. If it's good enough, It might be the new standard http protocol.But it won't be easy,because it's a worldwide protocol.
+you might want to change it to this form: `RETRIVE HTTP/1.2 /\r\n\r\nContentType:text/html\r\n`. If it's good enough, It might be the new standard http protocol.But it won't be easy,because it's a worldwide protocol. Note the form will not affect how they deal with it.
