--- a/1_base/2.components.md
+++ b/1_base/2.components.md
@@ -87,19 +87,24 @@ TODO: dig into exception
 
 ### protocol/interface/requirement/rule/argot
 
-> protocol is invented to satisfy concrete occassion(context). It's often drafted with only a few rules. 
+> protocol is invented to satisfy some concrete(limited) occassions(context) rather than all occassions. It's often drafted with only a few rules. 
+> Those who obey the protocol have expectation about what will happen.No delusion.
+
+EXP: Like Social division of labor or Assembly line.
+As an assembly line worker, what he is expected to handle is decided. So it is efficient.
+Like hospital, only the patient suffering abdominal pain or similar gastroenteric synptoms should be dispatched to a gastroenterologist.This is the protocol.
+A gastroenterologist will consider all of his patients suffering gastroenteric disease.A patient with pain all over the body will confuse the gastroenterologist. He would treat this patient as suffering gastroenteric disease or reject the patient.
 
 In desert,Water is more precious than gold. Car consumes oil rather than water. Sandglass won't work if replacing sand inside with rock.
 Without protocol, as we have distinct contexts that each can only deal with specific type of data. String treated as numbers would's work.
 
+
 - You might ask, why data needs transformation, they're just bits. Yes, at the and,or,not gate level,protocol is not needed,but contexts are also shattered. At this layer, the numerous amount of data are uncontrollable and meaningless to you.
 - You might say maybe we should keep type of data in transportation unchanged and have translaters called when data transported in and transported out. Yes,that's type conversion. Translaters that run implicitly(automatically) are called implicit type conversion. It costs a lot more resource to translate in and out every time. 
-<<<<<<< HEAD
+
 - With protocol. If B needs type y, A transform data from type x to type y. data transported from A to B, check if type of data is y, but no translation needed.
-=======
-- With protocol. If B needs type y, A transform data from type x to type y. data transported from A to B, no translation needed.
->>>>>>> 56aa689a393db997855db898a8d7a60ef35f7bd5
-- Without protocol, A translate data from type x to type z, data transported from A to B, B translate data from type z to type y.
+- Without protocol, A translate data from type x to type z, data transported from A to B. B translate data from type z to type y. type checking is not needed.
+- Translation(type conversion) consumes way much more resource(time,space) than type checking.
 
 Data types are also protocol.signed int and unsigned int both occupy 4 bytes. How can you tell if there's no protocol.
 
