--- a/1_base/1.basicUnderstandings.md
+++ b/1_base/1.basicUnderstandings.md
@@ -22,7 +22,7 @@ A sequence of code is loaded into ram, first ram address is 0x00000412 for examp
 1. data in 0x00000412 is sent to cpu, the address 0x00000412 will be temporarily stored somewhere known by cpu.
 1. cpu treats parts of the data as instruction and parts of it as target ram address
 1. data in target ram address will be sent to cpu, cpu deals the data with the instruction before.
-1. cpu reads address 0x00000412 and +1 address 0x00000413
+1. cpu reads address 0x00000412 and +1, get address 0x00000413
 1. repeat process 1,2,3,4,5 till end or jump to another address
 
 
