--- a/1_base/2.components.md
+++ b/1_base/2.components.md
@@ -37,8 +37,8 @@ NOTE: In python, the type of function is also `class`.
 
 It's usual to create a lot of `vertical containers` stored in a `horizontal container` and a couple of  `horizontal containers` stored in a `vertical container`.Thus the structure/workflow is decided.
 
-object in python2 is the second type.
-python3 introduced type as meta class in substitution of object. It's more like mixture form of these two types.
+`object` in python2 is the second type container.
+python3 introduced `type` as meta class in substitution of `object`. It's more like mixture form of these two types.
 
 	# container type1
 	def funA(elem):
@@ -65,7 +65,7 @@ python3 introduced type as meta class in substitution of object. It's more like 
 
 	elems = Elems(12,3,6)
 
-	# type is like mixture, note abc here are class attribute
+	# `type` is like mixture, note that abc here are class attribute
 	def funA(elem):
 		return elem.a * elem.c
 	
@@ -77,12 +77,6 @@ python3 introduced type as meta class in substitution of object. It's more like 
 
 
 
-
-### exception
-
-the most complicated part in programming language.
-
-TODO: dig into exception
 
 
 ### protocol/interface/requirement/rule/argot
@@ -120,3 +114,15 @@ EXP:
 an http request: `GET / HTTP/1.1\r\n\r\nContentType:text/html\r\n`
 you might want to change it to this form: `RETRIVE HTTP/1.2 /\r\n\r\nContentType:text/html\r\n`. If it's good enough, It might be the new standard http protocol.But it won't be easy,because it's a worldwide protocol. Note the form will not affect how they deal with it.
 
+
+### exception
+
+the most complicated part in programming language.
+
+TODO: dig into exception
+
+## summary
+- container stores data.
+- function handles data.
+- protocol links container and function.
+- exception handles protocol violation.
