--- a/1_base/3.why difficult.md
+++ b/1_base/3.why difficult.md
@@ -1,7 +1,80 @@
 ## why difficult to learn
 
-Programs are built upon these fundaments introduced before. But you usually can't sense them.
+Programs are built upon these fundaments introduced before. 
+But you usually can't sense them.
 Even though you can sense them, you still find it difficult to learn OS, python, django, elastic,etc.
 
-Too many layers of capsulation. High level abstraction. Too many people are joining this process without
-communication.
+### the key concept: Recursion
+
+1. The cpu instruction `JUMP` makes it so easy to achieve `recursion`.
+1. Recursion makes it so easy to wrap elements(especially for virtual elements) layer by layer. 
+1. Regardless of hardware limit(considering time and spece), this wrapping process is unlimited.
+
+And it caused the current situation.
+
+> [Jonathan Blow on Software Quality at the CSUA 2](https://www.youtube.com/watch?v=FvBySbGueww)
+
+- Too many layers of capsulation. 
+- High level abstraction.
+- Too many people are contributing to opensource projects without communication.
+- Learning each new thing takes time. But opensource software update so frequently.
+- You will not know which part goes wrong(no error reporting, but program runs slow)
+
+Have a look at how it can be a disaster in [Java call stack](https:--ptrthomas.wordpress.com-2006-06-06-java-call-stack-from-http-upto-jdbc-as-a-picture-)
+
+
+It's very interesting that when we talk about advanced-high-end knowledge of python, we are actually talking about lower level implementation of python.
+
+
+Iceberg analogy is good, but I'd more like to dramatically describe as below.
+
+											[top]						
+	[------------------------------------intermediate------------------------------------]
+		[--------------------------------intermediate--------------------------------]
+			[----------------------------intermediate----------------------------]
+				[------------------------intermediate------------------------]
+											...
+				[------------------------intermediate--------------------]
+			[----------------------------intermediate----------------------------]
+				[------------------------intermediate------------------------]
+					[------intermediate-----]  [-------intermediate------]
+							([low]  [low]  [low]  [low]  [low])
+
+- `top` is highly abstract and specially designed human readable interface extracted.
+- `intermediate` is mixed layers that you can't tell apart. the `-`,`-` signs shows how heavily this layer is wrapped.
+- `low` is the basis level.
+
+EXP: There's a huge gap/mutation between these levels.
+
+- Top level is like sea surface, exposed. We can see fish swimming and catch them on the surface.
+- Intermediate level is like the deep ocean.You'll get lost as soon as you dive into it.
+- Low level is like seabed, hidden deeply and almost never touched or checked by anyone.
+
+Although top level with good document makes itself easier to understand.
+Although top level is quite small comparing to intermediate level.
+It's still composed of numerous amount of commands that can be seperated into two parts.
+`some commands we frequently use in our daily` and `most commands we never touched`.
+
+- For those most commands we almost never touched.
+	- These's usually little document description. Only a few examples can be found on the internet.
+	- You wanna dig a bit deepper and modify it? No way. Maybe only the developer of will know for what condition these commands are created.
+- For those commands we frequently use in our daily
+	- These's good document description. Many examples can be found on the internet.
+	- You can dig a bit deeper than top level because you have used it in different situations, and there's still enough resource can be found.
+	- But you wanna dig more? No way. Even the developer would not know what the intermediate things are made for.
+
+Though pros says `don't rebuild wheels`. 
+But what should I do if the wheel is broken somewhere. Of course I have to fix some part. 
+what should I do if I want the wheel going less zigzag. Of course I have to Improve some part. 
+How am I able to do these if I always stay comfortably in the car and believe the wheel will always work well and work for me.
+
+
+### what to do
+
+- logical rules
+	- don't think about some universal program, focus on concrete affairs.
+	- don't create too many intermediate layers.
+- implementation rules
+	- single inheritance
+	- class hierarchies is like 2-3 levels deep.
+	- test low-level.
