--- a/1_base/3.why difficult.md
+++ b/1_base/3.why difficult.md
@@ -23,6 +23,15 @@ And it caused the current situation.
 Have a look at how it can be a disaster in [Java call stack](https:--ptrthomas.wordpress.com-2006-06-06-java-call-stack-from-http-upto-jdbc-as-a-picture-)
 
 
+- To believe layer 1 works, I need to believe layer 2 is static and works well.
+- To believe layer 2 works, I need to believe layer 3 is static and works well.
+- To believe layer 3 works, I need to believe layer 4 is static and works well.
+- Each layer requires strong belief that the layer beneath is static and works well.
+
+- If layer 1 doesn't work as expected, Can I find which layer should be responsible?
+- If layer 10 is problematic, but the problem doesn't show up in layer 2-10, but problem comes in layer 1. What can I do now? Will I be able to modify all intermediate layers?
+
+
 It's very interesting that when we talk about advanced-high-end knowledge of python, we are actually talking about lower level implementation of python.
 
 
@@ -72,8 +81,8 @@ How am I able to do these if I always stay comfortably in the car and believe th
 ### what to do
 
 - logical rules
-	- don't think about some universal program, focus on concrete affairs.
-	- don't create too many intermediate layers.
+	- don't think about creating a universal program, focus on concrete affairs.A program that only do what it should do is best.
+	- don't create too many intermediate layers. They will mislead and stray you.
 - implementation rules
 	- single inheritance
 	- class hierarchies is like 2-3 levels deep.
