--- a/1_base/3.why difficult.md
+++ b/1_base/3.why difficult.md
@@ -87,3 +87,23 @@ How am I able to do these if I always stay comfortably in the car and believe th
 	- single inheritance
 	- class hierarchies is like 2-3 levels deep.
 	- test low-level.
+- helping rules
+	- doc: what we finally see is a only a little. So at least 2 good examples(context) of what it can do is needed. Keep a prototyped version and it'll describe what it's try to do better.
+
+A production has taken caren of security(handle all exceptions), efficiency(improve performance).
+So it's hard to understand.
+
+EXP: 
+
+	object: I => who am I?
+	verb: want => first verb is want, not wanted,not will want => followed by buy, adverb: to is needed
+	verb: buy => not rob, not steal, the wallet should be checked, pay by cash,credit card?
+	subject: apple => should be green apple as only green apple is in stock
+	adjective: two => apple should be plural: apples, stock should be more than two or the action is failed.
+
+The core is short: `I want to buy two apples`. But will you be able to extract that quickly from the mass above without straying?
+
+EXP: `to apple`
+
+The staff in a fruit shop will understand and give you two apples even though `to apple` actually makes
+no meaning for most people. 
